changes to the model

--- a/AI_Models/Actor/pretrain.ipynb
+++ b/AI_Models/Actor/pretrain.ipynb
@@ -2,27 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (3087200219.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    from LLM\u001b[0m\n\u001b[0m            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from LLM_Critic.model import LLMCritic\n",
-    "\n",
+    "import sys\n",
+    "import os\n",
+    "parent_dir = os.path.abspath(os.path.join(os.getcwd(), os.pardir))\n",
+    "sys.path.append(parent_dir)\n",
+    "from AI_Models.LLM_Critic.model import LLM_Simulator\n",
     "from Policy import Policy\n",
+    "\n",
+    "\n",
     "from torch.utils.data import DataLoader, TensorDataset, random_split\n",
     "from torch.nn import MSELoss\n",
     "import torch\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -30,7 +26,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pretrainedCritic = torch.load(parent_dir + '/AI_Models/LLM_Critic/pretrainedCritic.pt')"
+   ]
   }
  ],
  "metadata": {
