--- a/AI_Models/Actor/pretrain.ipynb
+++ b/AI_Models/Actor/pretrain.ipynb
@@ -2,17 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "import os\n",
-    "parent_dir = os.path.abspath(os.path.join(os.getcwd(), os.pardir))\n",
-    "sys.path.append(parent_dir)\n",
-    "from AI_Models.LLM_Critic.model import LLM_Simulator\n",
     "from Policy import Policy\n",
-    "\n",
+    "import numpy as np\n",
     "\n",
     "from torch.utils.data import DataLoader, TensorDataset, random_split\n",
     "from torch.nn import MSELoss\n",
@@ -27,8 +22,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pretrainedCritic = torch.load(parent_dir + '/AI_Models/LLM_Critic/pretrainedCritic.pt')"
+    "DATASET_SIZE = 10000\n",
+    "INPUT_LOWER_LIMIT = 1\n",
+    "INPUT_UPPER_LIMIT = 100\n",
+    "OUTPUT_LOWER_LIMIT = 1\n",
+    "OUTPUT_UPPER_LIMIT = 10000\n",
+    "\n",
+    "NUM_EPOCHS = 1000"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pretrainedCritic = torch.load(parent_dir + '/AI_Models/LLM_Critic/pretrainedCritic.pt',map_location=device).to(device)\n",
+    "randomMarketMovement = np.random.randint(1, 101, size=(DATASET_SIZE, 1)).to_device(device)\n",
+    "\n",
+    "X = torch.argmax(pretrainedCritic(randomMarketMovement))\n",
+    "model = Policy(1,1000,1,1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
